--- a/index.htm
+++ b/index.htm
@@ -519,11 +519,11 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </p>
 
 <ul>
-<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program.</li>
+<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
 
-<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, National Natural Science Foundation of China (NSFC).</li>
+<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
 
-<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, Fundamental Research Funds for the Central Universities.</li>
+<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities.</li>
 </ul>
 <br>
 </div>
