--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include Conversational AI, machine learning, and multimedia semantic comprehension.
+His research interests include multimodal machine learning, conversational AI, and multimedia semantic comprehension.
 
 <br>
 <br>
