--- a/index.htm
+++ b/index.htm
@@ -473,6 +473,9 @@ Visual question answering by using information from multiple modalities has attr
 <li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
 "Adversarial Multimodal Network for Movie Question Answering.", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
 </li>
+<li><strong>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan, Yu-Gang Jiang. 
+"DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition.", Neurocomputing, 2020.
+</li>
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
 "Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
