--- a/index.htm
+++ b/index.htm
@@ -471,17 +471,17 @@ Visual question answering by using information from multiple modalities has attr
 <ul>
 
 <li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
-"Adversarial Multimodal Network for Movie Question Answering.", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
+"Adversarial Multimodal Network for Movie Question Answering", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
 </li>
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan, Yu-Gang Jiang. 
-"DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition.", Neurocomputing, 2020.
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, Yu-Gang Jiang. 
+"DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition", Neurocomputing, 2020.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
-"Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
+"Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach",
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
-"A unified latent feature learning framework in social media." 
+"A unified latent feature learning framework in social media",
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 </li>
 
