--- a/index.htm
+++ b/index.htm
@@ -471,17 +471,17 @@ Visual question answering by using information from multiple modalities has attr
 <ul>
 
 <li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
-"Adversarial Multimodal Network for Movie Question Answering", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
+Adversarial Multimodal Network for Movie Question Answering. IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
 </li>
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, Yu-Gang Jiang. 
-"DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition", Neurocomputing, 2020.
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. Neurocomputing, 2020.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
-"Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach",
+Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach.
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
-"A unified latent feature learning framework in social media",
+A unified latent feature learning framework in social media.
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 </li>
 
@@ -497,12 +497,12 @@ IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 <ul>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup>.
-"Latent feature learning in social media network".
+Latent feature learning in social media network.
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, and Changsheng Xu<sup>*</sup>. 
-"Tag-aware image classification via nested deep belief nets." 
+Tag-aware image classification via nested deep belief nets. 
 In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
 </li>
 
