--- a/index.htm
+++ b/index.htm
@@ -473,7 +473,7 @@ Visual question answering by using information from multiple modalities has attr
 <li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
 Adversarial Multimodal Network for Movie Question Answering. IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
 </li>
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, Yu-Gang Jiang. 
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan, Yu-Gang Jiang. 
 DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. Neurocomputing, 2020.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
