--- a/index.htm
+++ b/index.htm
@@ -470,15 +470,16 @@ Visual question answering by using information from multiple modalities has attr
 
 <ul>
 
-<li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
-Adversarial Multimodal Network for Movie Question Answering. IEEE Transactions on Multimedia (TMM, JCR-1区), doi: 10.1109/TMM.2020.3002667.
+<li>
+  <strong>Z. Yuan</strong>,S. Sun, L. Duan, C. Li, X. Wu and C. Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
+  in IEEE Transactions on Multimedia, doi: 10.1109/TMM.2020.3002667.
 </li>
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan, Yu-Gang Jiang. 
 DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. Neurocomputing, 2020.
 </li>
-<li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
-Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach.
-IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
+<li>
+  <strong>Z. Yuan</strong>, C. Xu, J. Sang, S. Yan and M. S. Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
+  in IEEE Transactions on Multimedia, vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
 A unified latent feature learning framework in social media.
