--- a/index.htm
+++ b/index.htm
@@ -471,7 +471,7 @@ Visual question answering by using information from multiple modalities has attr
 <ul>
 
 <li>
-  <strong>Z. Yuan</strong>,S. Sun, L. Duan<sup>*</sup>, C. Li<sup>*</sup>, X. Wu and C. Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
+  <strong>Zhaoquan Yuan</strong>,Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
   in IEEE Transactions on Multimedia (TMM, JCR-1区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
@@ -480,12 +480,12 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. Neu
 </li>
   
 <li>
-  <strong>Z. Yuan</strong>, C. Xu<sup>*</sup>, J. Sang, S. Yan and M. S. Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
+  <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
   in IEEE Transactions on Multimedia, vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
-<strong>Z. Yuan</strong>, J. Sang, C. Xu<sup>*</sup> and Y. Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
+<strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
   in IEEE Transactions on Multimedia (TMM, JCR-1区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
