--- a/index.htm
+++ b/index.htm
@@ -471,12 +471,12 @@ Visual question answering by using information from multiple modalities has attr
 <ul>
 
 <li>
-  <strong>Zhaoquan Yuan</strong>,Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
+  <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
   in IEEE Transactions on Multimedia (TMM, JCR-1区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan, Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. Neurocomputing, 2020.
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan and Yu-Gang Jiang. 
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing, 2020.
 </li>
   
 <li>
