--- a/index.htm
+++ b/index.htm
@@ -500,13 +500,13 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 
 <ul>
 
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup>.
-Latent feature learning in social media network.
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
+"Latent feature learning in social media network,"
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, and Changsheng Xu<sup>*</sup>. 
-Tag-aware image classification via nested deep belief nets. 
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang and Changsheng Xu<sup>*</sup>, 
+"Tag-aware image classification via nested deep belief nets,"
 In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
 </li>
 
