--- a/index.htm
+++ b/index.htm
@@ -383,7 +383,7 @@ His research interests include multimodal machine learning, conversational artif
 <!*****-------------------------Multimodal Dialogue------------------------****>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
-<font color="black"><b>Multimodal Dialogue System</b>
+<font color="black"><b>Multimodal Conversation</b>
 &nbsp;
 [<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
 </font>
@@ -394,11 +394,14 @@ His research interests include multimodal machine learning, conversational artif
 </td>
 <td>
 
-Human-computer dialogue is one of the important research directions of natural language understanding. However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
-
-In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, the multimodal dialogue system with both "visual and listening" plays a more and more important role in the fields of retail, customer service, media, education, tourism, etc. The multimodal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. 
-
-We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
+Human-computer dialogue is one of the important research directions of natural language understanding. 
+  However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
+  In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
+  the multimodal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
+  customer service, media, education, tourism, etc. The multimodal (text + image) interaction makes the information distribution 
+  more efficient and the interaction mode more natural. 
+We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's 
+  intentions in a detailed way and give accurate and fast responses.
 
 
 <br>
