--- a/index.htm
+++ b/index.htm
@@ -473,16 +473,16 @@ Visual question answering by using information from multiple modalities has attr
 
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
-  in IEEE Transactions on Multimedia (TMM, JCR-1区), doi: 10.1109/TMM.2020.3002667.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), doi: 10.1109/TMM.2020.3002667.
 </li>
   
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, Zhaoquan Yuan and Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing, 2020.
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang. 
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (TMM, JCR-2区), 2020.
 </li>
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
-  in IEEE Transactions on Multimedia, vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+  in IEEE Transactions on Multimedia (TMM, JCR-1区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
