--- a/index.htm
+++ b/index.htm
@@ -482,12 +482,12 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
-  in IEEE Transactions on Multimedia (TMM, JCR-1区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
 <strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
-  in IEEE Transactions on Multimedia (TMM, JCR-1区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
 </ul>
@@ -503,7 +503,7 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
 "Latent feature learning in social media network,"
-In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
+In Proceedings of the 21st ACM international conference on Multimedia (<strong>ACM MM, CCF-A</strong>), pp. 253-262. ACM, 2013.
 </li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang and Changsheng Xu<sup>*</sup>, 
