--- a/index.htm
+++ b/index.htm
@@ -619,7 +619,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </p>
 
 <ul>
-<li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">NLP Paper List</a>, 
+<li><a href="https://github.com/changwookjun/nlp-paper"  target="_blank">NLP Paper List</a>, 
   <a href="https://github.com/sebastianruder/NLP-progress"  target="_blank">NLP-progress</a>.
 </li>
 
