--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include multimodal machine learning, conversational artificial intelligence, and multimedia semantic comprehension.
+His research interests include machine learning and reasoning, question answering and conversation, and multimodal semantic comprehension.
 
 <br>
 <br>
