--- a/index.htm
+++ b/index.htm
@@ -500,7 +500,11 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 </p>
 
 <ul>
-
+<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, Xiao Wu and Changsheng Xu<sup>*</sup>,
+"Contrastive learning in frequency domain for Non-I.I.D. image classification,"
+submitted to the International MultiMedia Modeling Conference (MMM2021).
+</li>
+  
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
 "Latent feature learning in social media network,"
 In Proceedings of the 21st ACM international conference on Multimedia (<strong>ACM MM, CCF-A</strong>), pp. 253-262. ACM, 2013.
