--- a/index.htm
+++ b/index.htm
@@ -500,9 +500,9 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 </p>
 
 <ul>
-<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, Xiao Wu and Changsheng Xu<sup>*</sup>,
+<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,
 "Contrastive learning in frequency domain for Non-I.I.D. image classification,"
-submitted to the International MultiMedia Modeling Conference (MMM2021).
+submitted to the International MultiMedia Modeling Conference (MMM 2021).
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
