--- a/index.htm
+++ b/index.htm
@@ -556,10 +556,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <ul>
 
-<li>ACM International Conference on Multimedia 2020.</li>
-<li>International Conference on Multimedia Modeling 2020.</li>
+<li>ACM International Conference on Multimedia 2020, 2019.</li>
+<li>International Conference on Multimedia Modeling 2021, 2020, 2019.</li>
 <li>ACM International Conference on Multimedia in Asia 2019.</li>
-<li>ACM International Conference on Multimedia 2019.</li>
 <li>ACM International Conference on Multimedia Retrieval 2019.</li>
 <li>IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining 2019.</li>
 <li>IEEE International Conference on Multimedia and Expo 2019. </li>
