--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<title>Zhaoquan Yuan 's Homepage </title>
+<title>Zhaoquan Yuan (袁召全) 's Homepage </title>
 <style>
 body {
 font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include machine learning and reasoning, conversational artificial intelligence, and multimodal semantic comprehension.
+His research interests include Machine Learning and Reasoning, Question Answering, and Multimodal Artificial Intelligence.
 
 <br>
 <br>
@@ -394,7 +394,7 @@ His research interests include machine learning and reasoning, conversational ar
 </td>
 <td>
 
-Human-computer dialogue is one of the important research directions of natural language understanding. 
+Human-computer dialogue is one of the important research directions of natural language understanding and generation. 
   However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
   In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
   the multimodal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
