--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include Machine Learning and Reasoning, Question Answering, and Multimodal Artificial Intelligence.
+His research interests include machine learning and reasoning, question answering, and multimodal artificial intelligence.
 
 <br>
 <br>
