--- a/index.htm
+++ b/index.htm
@@ -299,7 +299,7 @@ Email:&nbsp; zqyuan0@gmail.com
 Zhaoquan Yuan is an Assistant Professor at the <a href="http://sist.swjtu.edu.cn/index.do?action=index"  target="_blank">School of Information Science and Technology</a>, <a href="https://www.swjtu.edu.cn/"  target="_blank">Southwest Jiaotong University (SWJTU)</a>. 
 He graduated with his bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received his Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/cn/index.html"  target="_blank">National Laboratory of Pattern Recognition</a>, 
-<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (IEEE Fellow, IAPR Fellow, 国家杰青). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
+<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (IEEE Fellow, IAPR Fellow, NSFC杰青). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
@@ -378,6 +378,72 @@ His research interests include machine learning and reasoning, question answerin
 <table cellpadding="0" cellspacing="0" width="95%">
 <tbody>
 
+<!*******************---------Textbook Question Answering---------*************>
+<tr bgcolor="#CCE5FF">
+<th colspan="2" align="left">
+<font color="black"><b>Multi-Modal Machine Comprehension (M3C)</b>
+
+&nbsp;
+
+<!--
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+-->
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/tqa.png" width="220">
+</td>
+<td>
+
+Multi-Modal Machine Comprehension (M3C) task builds on the popular Visual Question Answering (VQA) and Machine Comprehension (MC) paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
+We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
+
+
+<br>
+<br>
+
+<b>Datasets and codes: </b>
+[<a href="https://allenai.org/data/tqa" target="_blank">Dataset</a>]&nbsp;
+[<a href="https://zqyuan.github.io/homepage/">Code</a>]
+</td>
+</tr>
+<!*******************---------Textbook Question Answering end---------*************>
+
+
+<!*******************---------Stable prediction---------*************>
+<tr bgcolor="#CCE5FF">
+<th colspan="2" align="left">
+<font color="black"><b>Stable Machine Learning</b>
+&nbsp;
+
+<!--
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+-->
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/stable-learning.png" width="220">
+</td>
+<td>
+
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
+We made efforts to design advanced models to learn invariant representations for stable prediction by combining contrastive learning, causal inference, meta-learning, etc.
+
+
+
+<br>
+<br>
+
+<b>Datasets and codes: </b>
+[<a href="http://nico.thumedialab.com/" target="_blank">Dataset</a>]&nbsp;
+[<a href="https://zqyuan.github.io/homepage/">Code</a>]
+</td>
+</tr>
+<!**---------Stable prediction end--------------*>
 
 
 <!*****-------------------------Multimodal Dialogue------------------------****>
@@ -385,12 +451,16 @@ His research interests include machine learning and reasoning, question answerin
 <th colspan="2" align="left">
 <font color="black"><b>Multimodal Conversation</b>
 &nbsp;
+
+<!--
 [<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+-->
+
 </font>
 </th>
 </tr>
 <tr>
-<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/visdial.png" width="280">
+<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="200">
 </td>
 <td>
 
@@ -407,41 +477,19 @@ We are engaged in developing advanced algorithms for multimodal human-computer i
 <br>
 <br>
 
-
 <b>Datasets and codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Dataset</a>]&nbsp;
+[<a href="https://amritasaha1812.github.io/MMD/">Dataset</a>]&nbsp;
 [<a href="https://zqyuan.github.io/homepage/">Code</a>]
 
 </td>
 </tr>
 
-<!--
-<!*******************---------Movie Story Question Answering---------*************>
-<tr bgcolor="#CCE5FF">
-<th colspan="2" align="left">
-<font color="black"><b>Movie Story Question Answering</b>
-&nbsp;
-[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
-</font>
-</th>
-</tr>
-<tr>
-<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/movieqa_light.png" width="280">
-</td>
-<td>
+<!*****-------------------------Multimodal Dialogue end------------------------****>
 
-Visual question answering by using information from multiple modalities has attracted more and more attention in recent years. However, it is a very challenging task, as the visual content and natural language have quite different statistical properties. In this work, we present a method called Adversarial Multimodal Network (AMN) to better understand video stories for question answering. In AMN, we propose to learn multimodal feature representations by finding a more coherent subspace for video clips and the corresponding texts (e.g., subtitles and questions) based on generative adversarial networks. Moreover, a self-attention mechanism is developed to enforce our newly introduced consistency constraint in order to preserve the self-correlation between the visual cues of the original video clips in the learned multimodal representations. Extensive experiments on the benchmark MovieQA and TVQA datasets show the effectiveness of our proposed AMN over other published state-of-the-art methods.
 
-<br>
-<br>
 
-<b>Datasets and codes: </b>
-[<a href="http://movieqa.cs.toronto.edu/home/" target="_blank">MovieQA</a>]&nbsp;
-[<a href="https://zqyuan.github.io/homepage/">Code</a>]
-</td>
-</tr>
 
--->
+
 <!*****-----------------****>
 
 </tbody>
@@ -500,6 +548,12 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 </p>
 
 <ul>
+
+<li>Xiao Peng, <strong>Zhaoquan Yuan<sup>*</sup></strong>,  Huan Shao, Xiao Wu and Changsheng Xu,
+"Meta-Learning Causal Convolutional Network for Stable Prediction,"
+submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
+</li>
+
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,
 "Contrastive learning in frequency domain for Non-I.I.D. image classification,"
 submitted to the International MultiMedia Modeling Conference (MMM 2021).
@@ -583,7 +637,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 
-<!--
+
 <!**************** students****************>
 
 <div class="rightBox">
@@ -598,14 +652,24 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <ul>
 
-<li>Siyuan Sun (UESTC)
+<li>Huan Shao
 </li>
+
+<li>Xiao Peng
+</li>
+
+<li>Haitao Fang
+</li>
+
+<li>Zhou Du
+</li>
+
 
 </ul>
 
 <br>
 </div>
--->
+
 
 
 
