--- a/index.htm
+++ b/index.htm
@@ -324,7 +324,7 @@ His research interests include machine learning and reasoning, question answerin
 <ul>
 
 <li> 
-<font size="2" color="red"> <strong>[<I>June 01, 2020</I>]</strong> </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
+<font size="2" color="red">[<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
