--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,7 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="https://zqyuan.github.io/homepage/profile_photo.png" style="WIDTH: 150px; HEIGHT: 200px" /></p>
+<p><img alt="" src="https://zqyuan.github.io/homepage/name.png" style="WIDTH: 150px; HEIGHT: 200px" /></p>
 <p><b>
 Zhaoquan Yuan (袁召全)
 </b>
@@ -446,7 +446,7 @@ We made efforts to design advanced models to learn invariant representations for
 <!**---------Stable prediction end--------------*>
 
 
-<!*****-------------------------Multimodal Dialogue------------------------****>
+<!*****-------------------------Multi-Modal Dialogue------------------------****>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
 <font color="black"><b>Multimodal Conversation</b>
@@ -467,10 +467,10 @@ We made efforts to design advanced models to learn invariant representations for
 Human-computer dialogue is one of the important research directions of natural language understanding and generation. 
   However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
   In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
-  the multimodal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
-  customer service, media, education, tourism, etc. The multimodal (text + image) interaction makes the information distribution 
+  the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
+  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
   more efficient and the interaction mode more natural. 
-We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's 
+We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
   intentions in a detailed way and give accurate and fast responses.
 
 
