--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<title>Zhaoquan Yuan (袁召全) 's Homepage </title>
+<title>Zhaoquan Yuan（袁召全）'s Homepage </title>
 <style>
 body {
 font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -240,9 +240,9 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="https://zqyuan.github.io/homepage/name.png" style="WIDTH: 200px; HEIGHT: 200px" /></p>
+<p><img alt="" src="https://zqyuan.github.io/homepage/name.png" style="WIDTH: 180px; HEIGHT: 200px" /></p>
 <p><b>
-Zhaoquan Yuan (袁召全)
+Zhaoquan Yuan（袁召全）
 </b>
 </p>
 </h1>
