--- a/index.htm
+++ b/index.htm
@@ -525,7 +525,7 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (TMM, JCR-2区), 2020.
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (JCR-2区), 2020.
 </li>
   
 <li>
@@ -549,10 +549,12 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 
 <ul>
 
+ <!--
 <li>Xiao Peng, <strong>Zhaoquan Yuan<sup>*</sup></strong>,  Huan Shao, Xiao Wu and Changsheng Xu,
 "Meta-Learning Causal Convolutional Network for Stable Prediction,"
 submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
 </li>
+ -->
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,
 "Contrastive learning in frequency domain for Non-I.I.D. image classification,"
