--- a/index.htm
+++ b/index.htm
@@ -449,7 +449,7 @@ We made efforts to design advanced models to learn invariant representations for
 <!*****-------------------------Multi-Modal Dialogue------------------------****>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
-<font color="black"><b>Multimodal Conversation</b>
+<font color="black"><b>Multi-Modal Conversation</b>
 &nbsp;
 
 <!--
