--- a/index.htm
+++ b/index.htm
@@ -240,9 +240,9 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="https://zqyuan.github.io/homepage/name.png" style="WIDTH: 180px; HEIGHT: 200px" /></p>
+<p><img alt="" src="https://zqyuan.github.io/homepage/name.png" style="WIDTH: 140px; HEIGHT: 160px" /></p>
 <p><b>
-Zhaoquan Yuan（袁召全）
+Zhaoquan Yuan
 </b>
 </p>
 </h1>
