--- a/index.htm
+++ b/index.htm
@@ -430,7 +430,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 </td>
 <td>
 
-Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such a hypothesis is fragile in the real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
 We made efforts to design advanced models to learn invariant representations for stable prediction by combining contrastive learning, causal inference, meta-learning, etc.
 
 
@@ -468,10 +468,8 @@ Human-computer dialogue is one of the important research directions of natural l
   However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
   In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
   the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
-  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
-  more efficient and the interaction mode more natural. 
-We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
-  intentions in a detailed way and give accurate and fast responses.
+  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. 
+We are engaged in developing advanced algorithms for a multi-modal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
 
 
 <br>
@@ -521,21 +519,21 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), doi: 10.1109/TMM.2020.3002667.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), doi: 10.1109/TMM.2020.3002667.
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (JCR-2区), 2020.
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (JCR Q2), 2020.
 </li>
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
 <strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR-1区</strong>), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
+  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
 </ul>
