--- a/index.htm
+++ b/index.htm
@@ -426,7 +426,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 </th>
 </tr>
 <tr>
-<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/stable-learning.png" width="150">
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/stable.png" width="150">
 </td>
 <td>
 
