--- a/index.htm
+++ b/index.htm
@@ -430,7 +430,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 </td>
 <td>
 
-Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such a hypothesis is fragile in the real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
 We made efforts to design advanced models to learn invariant representations for stable prediction by combining contrastive learning, causal inference, meta-learning, etc.
 
 
@@ -468,8 +468,10 @@ Human-computer dialogue is one of the important research directions of natural l
   However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
   In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
   the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
-  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. 
-We are engaged in developing advanced algorithms for a multi-modal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
+  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
+  more efficient and the interaction mode more natural. 
+We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
+  intentions in a detailed way and give accurate and fast responses.
 
 
 <br>
@@ -728,9 +730,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全博士本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
+袁召全本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
   近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，
-  任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括智能问答与对话、机器学习与推理、多模态语义理解等。
+  任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括智能问答、机器学习与推理、多模态人工智能等。
   目前主持国家自然科学基金青年项目1项，四川省科技计划项目1项，中央高校基本科研业务费项目1项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。
 
 <br>
