--- a/index.htm
+++ b/index.htm
@@ -446,15 +446,17 @@ We made efforts to design advanced models to learn invariant representations for
 <!**---------Stable prediction end--------------*>
 
 
+
+<!--
 <!*****-------------------------Multi-Modal Dialogue------------------------****>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
 <font color="black"><b>Multi-Modal Conversation</b>
 &nbsp;
 
-<!--
+
 [<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
--->
+
 
 </font>
 </th>
@@ -485,7 +487,7 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 </tr>
 
 <!*****-------------------------Multimodal Dialogue end------------------------****>
-
+-->
 
 
 
@@ -730,7 +732,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
+袁召全博士本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
   近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，
   任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括智能问答、机器学习与推理、多模态人工智能等。
   目前主持国家自然科学基金青年项目1项，四川省科技计划项目1项，中央高校基本科研业务费项目1项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。
